--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - name: create env file
       run: |
          touch .env
-         echo NEXT_PUBLIC_CONVEX_URL=${{ secrets.NEXT_PUBLIC_CONVEX_URL }} >> .env
+         echo NEXT_PUBLIC_CONVEX_URL="https://youthful-seahorse-517.convex.cloud" >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test --if-present
